Fixed overflow regression, fully implemented itemsdex

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -17,7 +17,7 @@
 
 .pikachustyle{
     position: absolute;
-    width:10%;
+    width:9%;
     height:20%;
     left:50%;
     top:70%;
