--- a/src/app/moves/moves.component.css
+++ b/src/app/moves/moves.component.css
@@ -10,6 +10,7 @@
 .sidebarstyle {
     margin-left:15px;
     margin-right:15px;
+    min-width: 250px;
     max-width: 250px;
 }
 
@@ -32,10 +33,6 @@
 .specialboxstyle {
   font-size: 200%;
   padding-top: 100px;
-}
-
-.descboxstyle{
-  max-width: 250px;
 }
 
 table.darkTable {
