--- a/src/app/pokemon/pokemon.component.css
+++ b/src/app/pokemon/pokemon.component.css
@@ -10,7 +10,8 @@
 .sidebarstyle {
     margin-left:15px;
     margin-right:15px;
-    max-width: 260px;
+    max-width: 270px;
+    min-width: 270px;
 }
 
 .mainbarstyle {
